syntax = "proto3";

package monopoly;
option csharp_namespace = "Monopoly.Protobuf";

import "monopoly/property.proto";

// type : "announce_purchase"
// packet_type : DEFAULT
message AnnouncePurchasePayload {
  string player = 1;
  PropertyInfo property = 2;
}